--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     .loader {
       position: absolute;
       inset: 0;
-      background: radial-gradient(ellipse at center, #1e1e28 0%, #0d0e1a 100%);
+      background: radial-gradient(ellipse at center, #1b1c27 0%, #0d0e1a 100%);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -38,10 +38,14 @@
     }
 
     .breathing {
-      width: 96px;
-      height: 96px;
+      width: 100px;
+      height: 100px;
       object-fit: contain;
       animation: breath 1.8s ease-in-out infinite;
+      border-radius: 100px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.05), 0 0 40px rgba(255,255,255,0.03);
+      background: rgba(255, 255, 255, 0.02);
+      padding: 8px;
     }
 
     @keyframes breath {
