--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     .loader {
       position: absolute;
       inset: 0;
-      background: radial-gradient(ellipse at center, #1b1c27 0%, #0d0e1a 100%);
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -43,15 +43,15 @@
       object-fit: contain;
       animation: breath 1.8s ease-in-out infinite;
       border-radius: 100px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.05), 0 0 40px rgba(255,255,255,0.03);
-      background: rgba(255, 255, 255, 0.02);
+      box-shadow: 0 0 25px rgba(255, 255, 255, 0.15);
+      background: rgba(255, 255, 255, 0.04);
       padding: 8px;
     }
 
     @keyframes breath {
-      0% { transform: scale(1); opacity: 0.7; }
+      0% { transform: scale(1); opacity: 0.75; }
       50% { transform: scale(1.12); opacity: 1; }
-      100% { transform: scale(1); opacity: 0.7; }
+      100% { transform: scale(1); opacity: 0.75; }
     }
 
     @keyframes fadeIn {
