--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     .loader {
       position: absolute;
       inset: 0;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      background: #12121c;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -38,20 +38,17 @@
     }
 
     .breathing {
-      width: 100px;
-      height: 100px;
+      width: 96px;
+      height: 96px;
       object-fit: contain;
       animation: breath 1.8s ease-in-out infinite;
-      border-radius: 100px;
-      box-shadow: 0 0 25px rgba(255, 255, 255, 0.15);
-      background: rgba(255, 255, 255, 0.04);
-      padding: 8px;
+      filter: drop-shadow(0 0 12px rgba(255,255,255,0.07));
     }
 
     @keyframes breath {
-      0% { transform: scale(1); opacity: 0.75; }
+      0% { transform: scale(1); opacity: 0.7; }
       50% { transform: scale(1.12); opacity: 1; }
-      100% { transform: scale(1); opacity: 0.75; }
+      100% { transform: scale(1); opacity: 0.7; }
     }
 
     @keyframes fadeIn {
@@ -198,7 +195,6 @@
   </div>
 
   <script>
-    // Mostrar loader y luego app
     window.addEventListener('load', () => {
       setTimeout(() => {
         document.getElementById('loader').style.display = 'none';
