--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     .loader {
       position: absolute;
       inset: 0;
-      background: #12121c;
+      background: #1a1b24;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -42,13 +42,13 @@
       height: 96px;
       object-fit: contain;
       animation: breath 1.8s ease-in-out infinite;
-      filter: drop-shadow(0 0 12px rgba(255,255,255,0.07));
+      filter: drop-shadow(0 0 8px rgba(255,255,255,0.05)) drop-shadow(0 0 14px rgba(255,255,255,0.03));
     }
 
     @keyframes breath {
-      0% { transform: scale(1); opacity: 0.7; }
+      0% { transform: scale(1); opacity: 0.75; }
       50% { transform: scale(1.12); opacity: 1; }
-      100% { transform: scale(1); opacity: 0.7; }
+      100% { transform: scale(1); opacity: 0.75; }
     }
 
     @keyframes fadeIn {
@@ -164,12 +164,12 @@
 </head>
 <body>
 
-  <!-- Loader -->
+  <!-- Loader visible y elegante -->
   <div class="loader" id="loader">
     <img src="/imagotipo.png" alt="Triggui Loader" class="breathing" />
   </div>
 
-  <!-- App -->
+  <!-- App principal -->
   <div class="main" id="main">
     <div class="grid">
       <div class="block" id="detente" style="background: linear-gradient(135deg, #F00000, #DC281E);">
