--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     .loader {
       position: absolute;
       inset: 0;
-      background: #1f1f2d;
+      background: #2a2a38;
       display: flex;
       justify-content: center;
       align-items: center;
