--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     .loader {
       position: absolute;
       inset: 0;
-      background: #2a2a38;
+      background: #3a3a50;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -164,12 +164,12 @@
 </head>
 <body>
 
-  <!-- Loader -->
+  <!-- Loader visible y elegante -->
   <div class="loader" id="loader">
     <img src="/imagotipo.png" alt="Triggui Loader" class="breathing" />
   </div>
 
-  <!-- App -->
+  <!-- App principal -->
   <div class="main" id="main">
     <div class="grid">
       <div class="block" id="detente" style="background: linear-gradient(135deg, #F00000, #DC281E);">
