--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,13 @@
     .loader {
       position: absolute;
       inset: 0;
-      background: radial-gradient(circle at center, #eeeeee 0%, #3a3a50 100%);
+      background: radial-gradient(circle at center, #f4f4f4 0%, #2e2f3e 100%);
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       z-index: 999;
+      text-align: center;
     }
 
     .breathing {
@@ -45,10 +47,18 @@
       filter: drop-shadow(0 0 16px rgba(0,0,0,0.2)) drop-shadow(0 0 24px rgba(0,0,0,0.15));
     }
 
+    .loader-text {
+      margin-top: 18px;
+      font-size: 0.95rem;
+      color: #333;
+      opacity: 0.6;
+      letter-spacing: 0.5px;
+    }
+
     @keyframes breath {
-      0% { transform: scale(1); opacity: 0.7; }
-      50% { transform: scale(1.12); opacity: 1; }
-      100% { transform: scale(1); opacity: 0.7; }
+      0% { transform: scale(1); opacity: 0.75; }
+      50% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); opacity: 0.75; }
     }
 
     @keyframes fadeIn {
@@ -167,6 +177,7 @@
   <!-- Loader -->
   <div class="loader" id="loader">
     <img src="/imagotipo.png" alt="Triggui Loader" class="breathing" />
+    <div class="loader-text">Respira. Lee. Siente.</div>
   </div>
 
   <!-- App -->
