--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     .loader {
       position: absolute;
       inset: 0;
-      background: radial-gradient(circle at center, #f4f4f4 0%, #2e2f3e 100%);
+      background: radial-gradient(circle at center, #a1c4fd 0%, #2c3e50 100%);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -44,26 +44,31 @@
       height: 96px;
       object-fit: contain;
       animation: breath 1.8s ease-in-out infinite;
-      filter: drop-shadow(0 0 16px rgba(0,0,0,0.2)) drop-shadow(0 0 24px rgba(0,0,0,0.15));
+      filter: drop-shadow(0 0 16px rgba(255,255,255,0.25));
     }
 
     .loader-text {
       margin-top: 18px;
       font-size: 0.95rem;
-      color: #333;
-      opacity: 0.6;
+      color: rgba(255, 255, 255, 0.8);
       letter-spacing: 0.5px;
+      animation: fadeInText 1.6s ease-in-out 1.2s both;
     }
 
     @keyframes breath {
-      0% { transform: scale(1); opacity: 0.75; }
+      0% { transform: scale(1); opacity: 0.7; }
       50% { transform: scale(1.1); opacity: 1; }
-      100% { transform: scale(1); opacity: 0.75; }
+      100% { transform: scale(1); opacity: 0.7; }
     }
 
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
+    }
+
+    @keyframes fadeInText {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .grid {
