--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,19 @@
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
-      background-color: #0d0e1a;
+      background: linear-gradient(135deg, #0d0e1a, #1e1f2a);
+      animation: bgFlow 18s infinite alternate;
       color: white;
     }
 
+    @keyframes bgFlow {
+      0% { background: linear-gradient(135deg, #0d0e1a, #1e1f2a); }
+      50% { background: linear-gradient(135deg, #1f2235, #2c2f40); }
+      100% { background: linear-gradient(135deg, #0d0e1a, #1e1f2a); }
+    }
+
     body.dark {
-      background-color: #000;
+      background: #000;
     }
 
     .main {
@@ -78,6 +85,7 @@
       border-radius: 16px;
       padding: 16px;
       transition: all 0.3s ease;
+      text-align: center;
     }
 
     .label {
@@ -89,18 +97,32 @@
       background: rgba(255,255,255,0.95);
       color: #111;
       flex-direction: column;
-      text-align: center;
       line-height: 1.6;
-      font-size: 0.9rem;
+      font-size: 1rem;
       font-weight: 500;
     }
 
+    .accionables span {
+      display: block;
+      margin: 4px 0;
+    }
+
     .portada-wrapper img {
-      max-height: 100%;
-      max-width: 100%;
+      max-height: 90%;
+      max-width: 90%;
       object-fit: contain;
-      border-radius: 12px;
-      box-shadow: 0 6px 30px rgba(0,0,0,0.4);
+      border-radius: 14px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.35);
+      animation: zoomIn 0.7s ease forwards;
+      opacity: 0;
+      transform: scale(0.94);
+    }
+
+    @keyframes zoomIn {
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
 
     .hidden {
@@ -136,7 +158,7 @@
 </head>
 <body>
 
-  <div class="main" id="main">
+  <div class="main">
     <div class="grid">
       <div class="block" id="detente" style="background: linear-gradient(135deg, #ff5f6d, #ffc371);">
         <div class="block-content label" id="detenteLabel">Detente</div>
@@ -169,15 +191,27 @@
     const libros = [
       {
         portada: 'https://m.media-amazon.com/images/I/91bYsX41DVL.jpg',
-        accionables: ['🔁 Mejora 1% diario', '🧱 Crea sistemas, no metas', '🧠 Identidad guía el hábito']
+        accionables: [
+          "🔁 Mejora 1% diario",
+          "🧱 Crea sistemas, no metas",
+          "🧠 Identidad guía el hábito"
+        ]
       },
       {
         portada: 'https://m.media-amazon.com/images/I/71QKQ9mwV7L.jpg',
-        accionables: ['🧘‍♂️ No todo importa', '💩 Ignora con intención', '🔥 Sé brutalmente honesto']
+        accionables: [
+          "🧘‍♂️ No todo importa",
+          "💩 Ignora con intención",
+          "🔥 Sé brutalmente honesto"
+        ]
       },
       {
         portada: 'https://m.media-amazon.com/images/I/81LdLpv8mJL.jpg',
-        accionables: ['💪 No te rindas antes de empezar', '🛡️ Expón tus miedos al rechazo', '💬 Pide lo imposible']
+        accionables: [
+          "💪 No te rindas antes de empezar",
+          "🛡️ Expón tus miedos al rechazo",
+          "💬 Pide lo imposible"
+        ]
       }
     ];
 
@@ -201,8 +235,20 @@
     function mostrarContenido() {
       seleccionarNuevoLibro();
 
-      accionablesText.innerHTML = libroActual.accionables.join('<br>');
+      // Accionables typewriter
+      accionablesText.innerHTML = '';
+      libroActual.accionables.forEach((frase, i) => {
+        const span = document.createElement('span');
+        setTimeout(() => {
+          span.textContent = frase;
+          accionablesText.appendChild(span);
+        }, i * 400);
+      });
+
       leeImg.src = libroActual.portada;
+      leeImg.style.animation = 'none';
+      void leeImg.offsetWidth; // restart animation
+      leeImg.style.animation = null;
 
       accionablesText.classList.remove('hidden');
       detenteLabel.classList.add('hidden');
